--- a/Calculator1.html
+++ b/Calculator1.html
@@ -1,29 +1,71 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calculator Exercise</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
-  </head>
-  <body>
-    <h1>Calculator</h1>
-    <div class="container">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Calculator Exercise</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="Homepage.html">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Calculator1.html">Calculate to Fahrenheit</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Calculator2.html">Calculate to Celsius</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <h1>Celsius to Fahrenheit</h1>
+    <form>
+      <div class="container">
+        <h2>Calculator</h2>
         <div>
-            <label for="Celciusinput">Celsius:</label>
-            <input id="Celsiusinput" type="number" >
+          <label for="Celciusinput">Celsius:</label>
+          <input id="Celsiusinput" type="number">
         </div>
         <div>
-            <label for="Fahrenheitoutput">Fahrenheit:</label>
-            <input id="Fahrenheitoutput" type="number" >
+          <label for="Fahrenheitoutput">Fahrenheit:</label>
+          <input id="Fahrenheitoutput" type="number">
         </div>
         <br>
-    <div class="mt-1">
-        <button id="calculatebtn" type="button">Calculate</button>
-    </div>
-    </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-<script src="scripts/index.js"></script>
-  </body>   
+        <div class="mt-1">
+          <button id="calculatebtn" type="button">Calculate</button>
+          <button type="reset">Clear</button>
+        </div>
+      </div>
+    </form>
+  </main>
+  <footer>
+
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <script src="scripts/index.js"></script>
+</body>
+
 </html>
