--- a/Calculator2.html
+++ b/Calculator2.html
@@ -11,26 +11,60 @@
 </head>
 
 <body>
-    <h1>Calculator</h1>
-    <form>
-        <div>
-            <label for="Fahrenheitinput">Celsius:</label>
-            <input id="Fahrenheitinput" type="number" >
-        </div>
-        <div>
-            <label for="Celsiusoutput">Fahrenheit:</label>
-            <input id="Celsiusoutput" type="number" >
-        </div>
-        <br>
-    <div class="mt-1">
-        <button id="calculatebtn" type="button">Calculate</button>
-    </div>
-    </form>
-      
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="Homepage.html">Home</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Calculator1.html">Calculate to Fahrenheit</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Calculator2.html">Calculate to Celsius</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <main>
+        <h1>Fahrenheit to Celsius</h1>
+        <form>
+            <div class="container">
+                <h2>Calculator</h2>
+                <div>
+                    <label for="Fahrenheitinput">Fahrenheit:</label>
+                    <input id="Fahrenheitinput" type="number">
+                </div>
+                <div>
+                    <label for="Celsiusoutput">Celsius:</label>
+                    <input id="Celsiusoutput" type="number">
+                </div>
+                <br>
+                <div class="mt-1">
+                    <button id="calculatebtn" type="button">Calculate</button>
+                    <button type="reset">Clear</button>
+                </div>
+            </div>
+        </form>
+    </main>
+    <footer>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-    <script src="scripts/Calculator2.js"></script>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+<script src="scripts/Calculator2.js"></script>
 </body>
 
 </html>
