--- a/Calculator1.html
+++ b/Calculator1.html
@@ -49,7 +49,7 @@
         </div>
         <div>
           <label for="Fahrenheitoutput">Fahrenheit:</label>
-          <input id="Fahrenheitoutput" type="number">
+          <input id="Fahrenheitoutput" type="number" readonly>
         </div>
         <br>
         <div class="mt-1">
