--- a/Calculator2.html
+++ b/Calculator2.html
@@ -48,7 +48,7 @@
                 </div>
                 <div>
                     <label for="Celsiusoutput">Celsius:</label>
-                    <input id="Celsiusoutput" type="number">
+                    <input id="Celsiusoutput" type="number" readonly>
                 </div>
                 <br>
                 <div class="mt-1">
